--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(fit_hal_cate)
 export(fit_hal_cate_Rlearner)
+export(fit_hal_crate)
 export(inference_ate)
 export(inference_cate)
+export(truncate_pscore_adaptive)
 import(hal9001)
